--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="box">
                     <h2 class="name">Systemy Operacyjne</h2>
-                    <a href="#" class="buy">Materiały</a>
+                    <a href="/wzorek/wyrazenie.html">Materiały</a>
                     <div class="circle"></div>
                     <img src="img/linux.png" alt="systemy operacyjne img" class="product">
                 </div>
