--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="main-container">
         <div class="header-container">
-            <h1 id="header-title">Knowledge Base</h1>
+            <h1 id="header-title">matapeja's base</h1>
         </div>
 
         <div class="ee08-container">
             <h1>EE.08</h1>
             <div class="container">
                 <div class="box">
-                    <h2 class="name">Systemy Operacyjne</h2>
-                    <a href="/wzorek/wyrazenie.html">Materiały</a>
+                    <h2 class="name">Projekty</h2>
+                    <a href="/wzorek/wyrazenie.html">Zobacz</a>
                     <div class="circle"></div>
                     <img src="img/linux.png" alt="systemy operacyjne img" class="product">
                 </div>
